# data_analysis

./: .gitignore  README.md
postcodes/: .directory  .gitignore  geopandas.ipynb  ingest.py  main.py  pp.ipynb  pyproject.toml
